--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
+    "mysql": "^2.18.1",
     "socket.io": "^2.2.0"
   },
   "engines": {
